[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "attackcov"
version = "0.1.0"
description = "Map detections to MITRE ATT&CK techniques and render a coverage heatmap with gaps."
readme = "README.md"
authors = [{ name = "Joshua John", email = "josh202@gmail.com" }]
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["mitre", "attack", "detection", "coverage", "security", "siem"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
attackcov = "attackcov.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
